--- a/Source Frontend/package.json
+++ b/Source Frontend/package.json
@@ -8,20 +8,41 @@
     "lint": "vue-cli-service lint",
     "postinstall": "npm run build",
     "start": "node server.js"
-
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.1.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^35.1.0",
+    "@ckeditor/ckeditor5-upload": "^35.1.0",
+    "@ckeditor/ckeditor5-vue": "^4.0.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^0.27.2",
-    "bootstrap": "^4.6.2",
+    "bootstrap": "^4.0.0",
+    "chart.js": "^4.1.1",
+    "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
     "express": "^4.18.1",
+    "install": "^0.13.0",
     "jquery": "^3.6.0",
-    "quill": "^1.3.7",
+    "mdb-vue-ui-kit": "^3.0.0",
+    "npm": "^8.19.1",
+    "particles.vue3": "^1.16.1",
     "serve-static": "^1.15.0",
+    "tailwindcss": "^1.8.7",
+    "tiny-emitter": "^2.1.0",
+    "typeit": "^7.0.4",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
+    "vue-disable-autocomplete": "^0.0.4",
+    "vue-html-to-paper": "^1.4.4",
     "vue-router": "^4.1.3",
-    "vue-tinymce-editor": "^1.6.2",
+    "vue3-google-oauth2": "^1.0.6",
+    "vue3-print-nb": "^0.1.4",
+    "vue3-quill": "^0.2.6",
+    "vue3-vt-notifications": "^1.0.1",
     "vuejs-paginate-next": "^1.0.2",
     "vuex": "^4.0.2"
   },
